--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,7 +6,7 @@
         <div class="col-sm-6 footer-right">
           <div class="">
             <ul class="footer-list">
-              <li class="footer-item">ホーム</li>
+              <li class="footer-item"><%= link_to "ホーム", root_path, class: "footer-item" %></li>
               <li class="footer-item">当サイトについて</li>
           </div>
         </div>
