list_memo作成、その他調整

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -598,6 +598,10 @@ background: repeating-linear-gradient(-45deg, #67d1d6, #67d1d6 2px, #fff 2px, #f
   font-size:13px;
   font-weight:600;
 }
+.phone-form{
+  width:30%;
+  float:left;
+}
 
 /*マイリスト一覧　list-item/index*/
 .list-head{
