--- a/app/views/nurseries/index.html.erb
+++ b/app/views/nurseries/index.html.erb
@@ -31,7 +31,7 @@
                   <%= nursery.nearest %>
                 </div>
                 <div class="col-xs-2">
-                  <%= nursery.phone %>
+                  <%= nursery.phone %>-<%= nursery.phone_middle %>-<%= nursery.phone_right %>
                 </div>
               </div>
             <% end %>
