--- a/app/views/nurseries/show.html.erb
+++ b/app/views/nurseries/show.html.erb
@@ -3,40 +3,73 @@
 <div class="body-content">
 
   <div class="show-header">
-    <div class="f cate-logo">
-      <p class="h3 cate"><%= @nursery.category %></p>
-    </div>
-    <div class="f head">
-      <%= link_to @nursery.url do %>
-       <div class="s">
-         <div class="hukidasi">外部サイトに移動します</div>
-          <h1 class="h1"><%= @nursery.name %></h1>
-       </div>
-      <% end %>
-      <p class="head-p">　最寄り駅：<%= @nursery.nearest %></p>
+<!-- PC画面用 -->
+    <div class="show-head">
+      <div class="f cate-logo">
+        <p class="h3 cate"><%= @nursery.category %></p>
+      </div>
+      <div class="f head">
+        <%= link_to @nursery.url do %>
+         <div class="s">
+           <div class="hukidasi">外部サイトに移動します</div>
+            <h1 class="h1"><%= @nursery.name %></h1>
+         </div>
+        <% end %>
+        <p class="head-p">　最寄り駅：<%= @nursery.nearest %></p>
+      </div>
     </div>
 
-    <% if user_signed_in? %>
-        <% if @list_itema.present? %>
-          <%= link_to "", list_item_path(@list_itema.id), method: :delete, data: { confirm: 'マイリストから外してよろしいですか？ ※詳細ページに記入したメモは削除されます' } , class:"addlist2 fas fa-heart"%>
-        <% else %> <!-- if リストアイテム -->
-          <div class="add-box">
-            <%= form_for (@list_item) do |f| %>
-              <%= f.hidden_field :nursery_id, :value => @nursery.id %>
-              <%= f.hidden_field :user_id, :value => current_user.id %>
-              <%= f.hidden_field :row_order, :value => current_user.list_items.count + 1 %>
-              <%= button_tag "", class: "addlist fas fa-heart" %> <!-- マイリストに追加 -->
-            <% end %> <!-- form_for -->
-          </div>
-        <% end %> <!-- if リストアイテム -->
-    <% end %> <!-- if ユーザー -->
+<!-- スマホ画面用 -->
+    <div class="show-head-n row">
+      <div class="f head col-sm-8">
+        <%= link_to @nursery.url do %>
+         <div class="s">
+           <div class="hukidasi">外部サイトに移動します</div>
+            <h1 class="h1">【<%= @nursery.category %>】<%= @nursery.name %></h1>
+         </div>
+        <% end %>
+        <p class="head-p">　最寄り駅：<%= @nursery.nearest %></p>
+      </div>
+      <div class="col-sm-2 n-add-box">
+          <% if user_signed_in? %>
+            <% if @list_itema.present? %>
+              <%= link_to "", list_item_path(@list_itema.id), method: :delete, data: { confirm: 'マイリストから外してよろしいですか？ ※詳細ページに記入したメモは削除されます' } , class:"addlist2 fas fa-heart"%>
+            <% else %> <!-- if リストアイテム -->
+              <div class="add-box">
+                <%= form_for (@list_item) do |f| %>
+                  <%= f.hidden_field :nursery_id, :value => @nursery.id %>
+                  <%= f.hidden_field :user_id, :value => current_user.id %>
+                  <%= f.hidden_field :row_order, :value => current_user.list_items.count + 1 %>
+                  <%= button_tag "", class: "addlist fas fa-heart" %> <!-- マイリストに追加 -->
+                <% end %> <!-- form_for -->
+              </div>
+            <% end %> <!-- if リストアイテム -->
+        <% end %> <!-- if ユーザー -->
+      </div>
+    </div>
+
+  <div class="l-add-box">
+      <% if user_signed_in? %>
+          <% if @list_itema.present? %>
+            <%= link_to "", list_item_path(@list_itema.id), method: :delete, data: { confirm: 'マイリストから外してよろしいですか？ ※詳細ページに記入したメモは削除されます' } , class:"addlist2 fas fa-heart"%>
+          <% else %> <!-- if リストアイテム -->
+            <div class="add-box">
+              <%= form_for (@list_item) do |f| %>
+                <%= f.hidden_field :nursery_id, :value => @nursery.id %>
+                <%= f.hidden_field :user_id, :value => current_user.id %>
+                <%= f.hidden_field :row_order, :value => current_user.list_items.count + 1 %>
+                <%= button_tag "", class: "addlist fas fa-heart" %> <!-- マイリストに追加 -->
+              <% end %> <!-- form_for -->
+            </div>
+          <% end %> <!-- if リストアイテム -->
+      <% end %> <!-- if ユーザー -->
+    </div>
   </div>
-
 
 
   <div class="container-fluid">
     <div class="row show-main">
-      <div class="col-sm-8 main-content">
+      <div class="col-md-8 col-sm-12 main-content">
 
         <div class="map-area">
           <div id="map2" style="width: 720px; height: 600px;"></div>
@@ -79,10 +112,12 @@
       </div>
 
 
-      <div class="col-sm-4 sidebar">
+      <div class="col-md-4 col-sm-12 sidebar">
         <div class="tell-box">
-          <a class="tell fas fa-phone" href="tel:<%= @nursery.phone %>+<%= @nursery.phone_middle %>+<%= @nursery.phone_right %>"><%= @nursery.phone %>-<%= @nursery.phone_middle %>-<%= @nursery.phone_right %></a>
+          <% if @phone.present? %>
+          <a class="tell fas fa-phone" href="tel:<%= @phone %>"><%= @nursery.phone %>-<%= @nursery.phone_middle %>-<%= @nursery.phone_right %></a>
           <!-- スマホのときのみ発信できるように書き換える? -->
+          <% end %>
         </div>
         <div class="address-box box ohana">
           <table class="box-table">
