アバウトページをつくろう

--- a/app/views/nurseries/edit.html.erb
+++ b/app/views/nurseries/edit.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/header' %>
+<%= render 'shared/header', search: @search %>
 <div class="body-content">
 	<div class="container-fluid">
 		<div class="row">
