--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/header' %>
+<%= render 'shared/header', search: @search %>
 
 <div class="body-content">
   <h2 class="h2 prof-head">プロフィール編集</h2>
