--- a/app/views/admins/show.html.erb
+++ b/app/views/admins/show.html.erb
@@ -1,2 +1,59 @@
-<h1>Admins#show</h1>
-<p>Find me in app/views/admins/show.html.erb</p>
+<%= render 'shared/header', search: @search %>
+
+<div class="body-content">
+  <h2 class="h2 prof-head">プロフィール編集</h2>
+  <div class="container-fluid">
+    <div class="row">
+
+      <%= form_for(@user) do |f| %>
+      <div class="user-box">
+        <div class="user-box-t">
+          <div class="box-1">
+            <p class="user-info1">おなまえ</p>
+            <p class="user-info"><%= f.text_field :name, autofocus: true, class:"form-control" %></p>
+          </div>
+          <div class="box-2">
+            <p class="user-info1">メールアドレス</p>
+            <p class="user-info"><%= f.text_field :email, autofocus: true, class:"form-control" %></p>
+          </div>
+          <div class="prof-btn-area">
+            <%= f.submit "更新する", class:"btn btn-lg prof-btn" %>
+          </div>
+        </div>
+      </div>
+
+      <div class="user-box2">
+        <div class="user-box-m">
+          <div class="box-3">
+            <p class="user-info1">郵便番号</p>
+            <p class="user-info"><%= f.text_field :post_code, autofocus: true, :placeholder=>"郵便番号(ハイフンなし)", class:"form-control" %></p>
+          </div>
+          <div class="box-3">
+            <p class="user-info1">住所</p>
+            <p class="user-info"><%= f.text_field :address, autofocus: true, :placeholder=>"住所", class:"form-control" %></p>
+            <%= @user.latitude %>/<%= @user.longitude %>
+          </div>
+          <div class="prof-btn-area">
+            <%= f.submit "更新する", class:"btn btn-lg prof-btn" %>
+          </div>
+        </div>
+      </div>
+
+      <% end %>
+
+      <div class="user-box3">
+        <div class="prof-btn-area s">
+          <a class="btn btn-lg prof-btn3"  href="">パスワードを変更する</a>
+          <p class="user-message">パスワード変更ページに移動します</p>
+        </div>
+      </div>
+
+      <div class="user-box4">
+        <div class="prof-btn-area s">
+          <%= link_to "アカウントを削除する", user_path(@user), method: :delete, data: { confirm: 'アカウントを削除してよろしいですか？' }, class: "prof-btn4" %>
+          <div class="user-message message-box">アカウントを削除すると、プロフィール、スポット、マイリスト等、登録されたすべての情報が削除されます。</div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
