--- a/app/views/nurseries/show.html.erb
+++ b/app/views/nurseries/show.html.erb
@@ -174,27 +174,27 @@
               </tr>
               <tr>
                 <th class="price-th center-text">０歳</th>
-                <td class="center-text"><%= price.zero %>円</td>
+                <td class="center-text"><%= number_with_delimiter(price.zero) %>円</td>
               </tr>
               <tr>
                 <th class="price-th center-text">1歳</th>
-                <td class="center-text"><%= price.one %>円</td>
+                <td class="center-text"><%= number_with_delimiter(price.one) %>円</td>
               </tr>
               <tr>
                 <th class="price-th center-text">2歳</th>
-                <td class="center-text"><%= price.twe %>円</td>
+                <td class="center-text"><%= number_with_delimiter(price.twe) %>円</td>
               </tr>
               <tr>
                 <th class="price-th center-text">3歳</th>
-                <td class="center-text"><%= price.three %>円</td>
+                <td class="center-text"><%= number_with_delimiter(price.three) %>円</td>
               </tr>
               <tr>
                 <th class="price-th center-text">4歳</th>
-                <td class="center-text"><%= price.four %>円</td>
+                <td class="center-text"><%= number_with_delimiter(price.four) %>円</td>
               </tr>
               <tr>
                 <th class="price-th center-text">5歳</th>
-                <td class="center-text"><%= price.five %>円</td>
+                <td class="center-text"><%= number_with_delimiter(price.five) %>円</td>
               </tr>
             </thead>
           </table>
