--- a/app/views/shared/_header2.html.erb
+++ b/app/views/shared/_header2.html.erb
@@ -65,7 +65,7 @@
           </li>
           <li class="item">
             <!-- about -->
-            <%= link_to " ","#", class: "item-a a6 fas fa-book" %>
+            <%= link_to " ","about_path", class: "item-a a6 fas fa-book" %>
           </li>
         </ul>
       </nav>
