--- a/app/views/list_items/index.html.erb
+++ b/app/views/list_items/index.html.erb
@@ -57,7 +57,7 @@
               <% @list_items.each do |list_item| %>
               <%= form_for(list_item) do |f| %>
               <tr>
-                <td><%= f.text_field :row_order, class: "roworder" %></td>
+                <td><%= f.number_field :row_order, class: "roworder" %></td>
                 <td><%= f.submit "保存", class: "btn btn-xs btn-info" %></td>
                 <td><%= link_to list_item.nursery.name, nurseries_path(list_item.nursery.id) %></td>
                 <td><%= list_item.nursery.category %></td>
