--- a/app/views/nurseries/index.html.erb
+++ b/app/views/nurseries/index.html.erb
@@ -9,16 +9,16 @@
 
         <div class="nursery-area">
           <div class="row nursery-area-head">
-              <div class="col-xs-2">保育園名</div>
+              <div class="col-xs-3">保育園名</div>
               <div class="col-xs-1">カテゴリ</div>
               <div class="col-xs-4">住所</div>
-              <div class="col-xs-3">最寄り駅</div>
-              <div class="col-xs-2">電話番号</div>
+              <div class="col-xs-4">最寄り駅</div>
+<!--               <div class="col-xs-2">電話番号</div> -->
           </div>
           <% @nurseries.each do |nursery| %>
             <%= link_to nurseries_path(nursery) do %>
               <div class="row nursery-area-list">
-                <div class="col-xs-2">
+                <div class="col-xs-3">
                   <%= nursery.name %>
                 </div>
                 <div class="col-xs-1">
@@ -27,12 +27,12 @@
                 <div class="col-xs-4">
                   <%= nursery.address %>
                 </div>
-                <div class="col-xs-3">
+                <div class="col-xs-4">
                   <%= nursery.nearest %>
                 </div>
-                <div class="col-xs-2">
+<!--                 <div class="col-xs-2">
                   <%= nursery.phone %>-<%= nursery.phone_middle %>-<%= nursery.phone_right %>
-                </div>
+                </div> -->
               </div>
             <% end %>
           <% end %>
