--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,16 +1,16 @@
 <footer>
     <div class="container-fluid footer-wrapper">
       <div class="row footer-content">
-        <div class="col-sm-6 footer-left">
+        <div class="col-md-2 footer-left">
+          <p class="copyright">©mizuki-saito.</p>
         </div>
-        <div class="col-sm-6 footer-right">
+        <div class="col-md-10 footer-right">
           <div class="">
             <ul class="footer-list">
               <li class="footer-item"><%= link_to "ホーム", root_path, class: "footer-item" %></li>
-              <li class="footer-item">当サイトについて</li>
+              <li class="footer-item"><%= link_to "当サイトについて", about_path, class: "footer-item" %></li>
           </div>
         </div>
-        <p class="copyright">©mizuki-saito.</p>
       </div>
     </div>
 </footer>
