--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -121,6 +121,7 @@ button{
   background: #d6ebff;
   box-shadow: 0px 0px 0px 10px #d6ebff;
   border: dashed 2px white;
+  border-radius:10px;
   float:left;
 }
 .header-logo{
@@ -132,6 +133,7 @@ button{
   font-weight:600;
   margin: 0;
   padding: 0;
+  border-radius:10px;
 }
 
 .list{
@@ -334,22 +336,41 @@ color:#7fbfff;
   background-color:#218F9B;
   margin-top:20px;
   height:400px;
+  width:100%;
+
 }
+
 .footer-content{
-  width:960px;
+  width:1080px;
   margin:0 auto;
-  padding-top:20px;
 }
-.footer-list{
-  list-style-type: none;
-  line-height:25px;
+.footer-box{
+  margin-top:10px;
 }
 .footer-item{
-  color:white;
+  display:block;
+  color:#fff;
+  border:dashed 1px #fff;
+  padding:10px;
+  text-align:center;
+  margin:20px;
+  font-weight:600;
+}
+
+.footer-item:hover{
+  color:#218f9b;
 }
 .copyright{
-  color:white;
-  margin-top:300px;
+  // color:#fff;
+  // margin-top:200px;
+}
+.footerimg{
+  background-image: url(footerimg.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  width:550px;
+  height:400px;
+  margin:0 auto;
 }
 
 /*サイトバー----------------------------------------------------------*/
@@ -865,6 +886,13 @@ background: repeating-linear-gradient(-45deg, #67d1d6, #67d1d6 2px, #fff 2px, #f
 .l-add-box{
   display:none;
 }
+.footer-content{
+  width:100%;
+}
+.footerimg{
+  width:60%;
+  height:300px;
+}
 }
 
 /* タブレット縦置きサイズ(768px)程度の画面の大きさ以下に適用される設定です */
@@ -1089,6 +1117,13 @@ background: repeating-linear-gradient(-45deg, #67d1d6, #67d1d6 2px, #fff 2px, #f
 .addlist2::hover{
   color:#f95f92;
 }
+.footer-content{
+  width:100%;
+}
+.footerimg{
+  width:60%;
+  height:300px;
+}
 
 
 }
@@ -1300,4 +1335,9 @@ background: repeating-linear-gradient(-45deg, #67d1d6, #67d1d6 2px, #fff 2px, #f
 .h1{
   font-size:15px;
 }
+.footerimg{
+  width:100%;
+  height:300px;
+}
+
 }
