--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,8 +2,8 @@
   <div class="footer-wrapper container-fluid">
     <div class="footer-content row">
       <div class="footer-box col-md-3 col-sm-12">
-        <%= link_to "ホーム", root_path, class: "footer-item" %>
-        <%= link_to "当サイトについて", about_path, class: "footer-item" %>
+        <%= link_to "home", root_path, class: "footer-item" %>
+        <%= link_to "about", about_path, class: "footer-item" %>
       </div>
       <div class="footerimg col-md-9 col-sm-12"></div>
 
