バリデーション

--- a/app/views/list_items/index.html.erb
+++ b/app/views/list_items/index.html.erb
@@ -37,10 +37,7 @@
 
 
         <div class="col-md-8 col-sm-12">
-          <div class="list-a-box">
-          <a class="list-a" href="">並べ替え</a>
-        </div>
-          <table class="table table-bordered">
+          <table class="table table-bordered list-item">
             <thead>
               <tr>
                 <th class="col-lg-1">並び順</th>
