--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -41,12 +41,12 @@
 
       <% end %>
 
-      <div class="user-box3">
+<!--       <div class="user-box3">
         <div class="prof-btn-area s">
           <a class="btn btn-lg prof-btn3"  href="">パスワードを変更する</a>
           <p class="user-message">パスワード変更ページに移動します</p>
         </div>
-      </div>
+      </div -->>
 
       <div class="user-box4">
         <div class="prof-btn-area s">
