--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -430,58 +430,58 @@ color:#7fbfff;
 .about-box-p{
   text-align:center;
 }
-.about-img1{
-  background-image: url(about-1.png);
-  background-size: cover;
-  background-position: center;
-  width:100%;
-  height:600px;
-}
-.about-img2{
-  background-image: url(about-2.png);
-  background-size: cover;
-  background-position: center;
-  width:100%;
-  height:600px;
-}
-.about-img3{
-  background-image: url(about-3.png);
-  background-size: cover;
-  background-position: center;
-  width:100%;
-  height:600px;
-}
+// .about-img1{
+//   background-image: url(about-1.png);
+//   background-size: cover;
+//   background-position: center;
+//   width:100%;
+//   height:600px;
+// }
+// .about-img2{
+//   background-image: url(about-2.png);
+//   background-size: cover;
+//   background-position: center;
+//   width:100%;
+//   height:600px;
+// }
+// .about-img3{
+//   background-image: url(about-3.png);
+//   background-size: cover;
+//   background-position: center;
+//   width:100%;
+//   height:600px;
+// }
 
-.about-img4{
-  background-image: url(about-4.png);
-  background-size: cover;
-  background-position: center;
-  width:100%;
-  height:600px;
-}
+// .about-img4{
+//   background-image: url(about-4.png);
+//   background-size: cover;
+//   background-position: center;
+//   width:100%;
+//   height:600px;
+// }
 
-.about-img5{
-  background-image: url(about-5.png);
-  background-size: cover;
-  background-position: center;
-  width:100%;
-  height:600px;
-}
-.about-img6{
-  background-image: url(about-6.png);
-  background-size: cover;
-  background-position: center;
-  width:100%;
-  height:600px;
-}
+// .about-img5{
+//   background-image: url(about-5.png);
+//   background-size: cover;
+//   background-position: center;
+//   width:100%;
+//   height:600px;
+// }
+// .about-img6{
+//   background-image: url(about-6.png);
+//   background-size: cover;
+//   background-position: center;
+//   width:100%;
+//   height:600px;
+// }
 
-.about-img7{
-  background-image: url(about-7.png);
-  background-size: cover;
-  background-position: center;
-  width:100%;
-  height:600px;
-}
+// .about-img7{
+//   background-image: url(about-7.png);
+//   background-size: cover;
+//   background-position: center;
+//   width:100%;
+//   height:600px;
+// }
 
 /*メインコンテンツ--------------------------------------------*/
 .nursery-area{
