--- a/app/views/nurseries/about.html.erb
+++ b/app/views/nurseries/about.html.erb
@@ -10,6 +10,9 @@
 <div class="body-content">
 	<div class="container-fluid">
     	<div class="row">
+    		<div class="list-head">
+				<h2 class="h2">『With You』でできること</h2>
+			</div>
 			<div class="about-box"><p class="about-box-p h3">1.保育園の位置をマップで確認</p><div class="about-img1"></div></div>
 			<div class="about-box"><p class="about-box-p h3">2.自宅からの距離と移動時間(徒歩)を表示</p><div class="about-img2"></div></div>
 			<div class="about-box"><p class="about-box-p h3">3.気になる保育園をマイリストに登録</p><div class="about-img3"></div></div>
