バリデーション修正

--- a/app/views/nurseries/edit.html.erb
+++ b/app/views/nurseries/edit.html.erb
@@ -52,6 +52,10 @@
 									<td><%= f.label :holiday, "休園日" %></td>
 									<td><%= f.text_field :holiday, autofocus: true, class:"form-control" %></td>
 								</tr>
+																<tr>
+									<td><%= f.label :capacity, "定員" %></td>
+									<td><%= f.text_field :capacity, autofocus: true, class:"form-control" %></td>
+								</tr>
 								<tr>
 									<td><%= f.label :url, "URL" %></td>
 									<td><%= f.text_field :url, autofocus: true, class:"form-control" %></td>
