--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,7 +35,6 @@ ul{
 a{
   color:#546E7A;
   text-decoration:none;
-/*  position: relative;*/
 }
 a:hover{
   color:#FFD731;
@@ -45,22 +44,16 @@ body{
   font-family: "Lucida Sans Unicode", "Lucida Grande", Arial, Helvetica, "ヒラノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", sans-serif;
   line-height: 1.5;
 }
-button{
-  // 背景色を黒に指定
-  background-color: #fff;
-  // submitボタンのを枠を非表示にする
-  border-style: none;
-}
+// button{
+//   background-color: #fff;
+//   // submitボタンのを枠を非表示にする
+//   border-style: none;
+// }
 .clearfix::after{
   content:"";
   display: block;
   clear: both;
 }
-
-
-/*.h1{
-  font-size:20px;
-}*/
 .h2{
   font-size:18px;
   font-weight:600;
@@ -83,9 +76,7 @@ button{
   width:100%;
   height:120px;
   background-color:#fff;
-  // position: fixed;
   z-index:5;
-  // border-bottom:solid 1px #eaeaea;
   box-shadow: 0px 9px 7px -7px rgba(0,0,0,0.1);
   -webkit-box-shadow: 0px 9px 7px -7px rgba(0,0,0,0.1);
   -moz-box-shadow: 0px 9px 7px -7px rgba(0,0,0,0.1);
@@ -96,16 +87,10 @@ button{
 .header-nn{
   display:none;
 }
-.header-area{
-  // height:120px;
-}
-// ↑headerの固定のために作ったdivとclass
-
 .header-content{
   width:1080px;
   margin:0 auto;
   padding-top:15px;
-  // line-height: 100px;
 }
 .welcome{
   font-weight:600;
@@ -125,9 +110,6 @@ button{
   float:left;
 }
 .header-logo{
-  // background-image: url(img/logo.png);
-  // background-size:cover;
-  // background-position: center;
   color:#fff;
   font-size:25px;
   font-weight:600;
@@ -138,7 +120,6 @@ button{
 
 .list{
   list-style-type: none;
-  // line-height:10px;
   float:right;
 }
 .item{
@@ -264,12 +245,6 @@ button{
 
 }
 /*検索--------------------------------------------------*/
-.index-header{
-  // width:100%;
-  // margin:0 auto;
-  // border-bottom:solid 1px #eaeaea;
-}
-
 .search-box{
   margin:5px 0;
   position:relative;
@@ -310,14 +285,11 @@ button{
 background:#eaeaea;
 color:#7fbfff;
 }
-
 .mushimegane{
   position: absolute;
   left:380px;
   top: 18px;
 }
-
-
 /*メインの幅---------------------------------------*/
 .body-content{
   width:1080px;
@@ -337,9 +309,7 @@ color:#7fbfff;
   margin-top:20px;
   height:400px;
   width:100%;
-
 }
-
 .footer-content{
   width:1080px;
   margin:0 auto;
@@ -365,7 +335,7 @@ color:#7fbfff;
   // margin-top:200px;
 }
 .footerimg{
-  background-image: url(footerimg.png);
+  background-image: image-url('footerimg.png');
   background-size: contain;
   background-repeat: no-repeat;
   width:550px;
@@ -414,7 +384,7 @@ color:#7fbfff;
   font-weight:600;
 }
 .about-img{
-  background-image: url(about1.png);
+  background-image: image-url('about1.png');
   background-size: cover;
   background-position:0 -300px;
   background-repeat: no-repeat;
@@ -517,7 +487,6 @@ color:#7fbfff;
 
 // ルート検索
 .route{
-  // width:1060px;
   height:100px;
 }
 .list-route{
@@ -536,9 +505,6 @@ color:#7fbfff;
   border-radius:10px;
   margin:20px;
 }
-
-
-
 /*保育園詳細------------------------------------*/
 .show-header{
   height:100px;
@@ -659,8 +625,6 @@ background: repeating-linear-gradient(-45deg, #67d1d6, #67d1d6 2px, #fff 2px, #f
 .map-area{
   margin:10px 0;
 }
-
-
 .tell-box{
   margin:0 auto;
   height:50px;
@@ -689,7 +653,7 @@ background: repeating-linear-gradient(-45deg, #67d1d6, #67d1d6 2px, #fff 2px, #f
   text-align:center;
 }
 .ohana{
-  background-image:url(ohana.png);
+  background-image:image-url('ohana.png');
   background-size:15%;
   background-repeat: no-repeat;
   background-position: 60% 0;
@@ -734,10 +698,6 @@ background: repeating-linear-gradient(-45deg, #67d1d6, #67d1d6 2px, #fff 2px, #f
   float:left;
   font-size:20px;
   margin:3px;
-}
-.phone-notice{
-  // display:block;
-  // width:150px;
 }
 /*マイリスト一覧　list-item/index*/
 .list-head{
@@ -948,7 +908,7 @@ background: repeating-linear-gradient(-45deg, #67d1d6, #67d1d6 2px, #fff 2px, #f
   height:300px;
 }
 .about-img{
-  background-image: url(about2.png);
+  background-image: image-url('about2.png');
   background-size: cover;
   background-position:0 -300px;
   background-repeat: no-repeat;
@@ -1012,129 +972,49 @@ background: repeating-linear-gradient(-45deg, #67d1d6, #67d1d6 2px, #fff 2px, #f
 }
 .sbox{
   height: 40px;
-  // padding:0 10px;
-  // float:left;
-  // width:250px;
-  // border-radius:25px 0 0 25px;
-  // border:solid 2.5px #eaeaea;
-  // outline: 0;
 }
 .sbox-2{
   height: 40px;
-  // padding:0 10px;
-  // float:left;
-  // width:100px;
-  // border:none;
-  // border-top:solid 2.5px #eaeaea;
-  // border-bottom:solid 2.5px #eaeaea;
-  // outline: 0;
 }
 .sbtn{
   height: 40px;
-  // padding:0 10px;
-  // display:block;
-  // float:left;
-  // background:#7fbfff;
-  // color:#fff;
-  // border:none;
-  // font-size:20px;
-  // border-radius:0 25px 25px 0;
-  // outline: 0;
-  // width:50px;
 }
 .mushimegane{
-  // position: absolute;
   left:370px;
   top: 15px;
 }
-// .item{
-//   float:left;
-//   margin:0 10px;
-//   position:relative;
-// }
 .item-a{
   display:block;
   width:100px;
-  // text-align:center;
-  // font-size:30px;
-  // color:#9AB1B7;
 }
 .a1::after{
-  // content: "スポット登録";
-  // font-size:14px;
-  // font-weight:600;
-  // position:absolute;
   top: 37px;
-  // left:-3px;
 }
 .a2::after{
-  // content: "マイリスト";
-  // font-size:14px;
-  // font-weight:600;
-  // position:absolute;
   top: 37px;
-  // left:10px;
 }
 .a3::after{
-  // content: "マイページ";
-  // font-size:14px;
-  // font-weight:600;
-  // position:absolute;
   top: 37px;
-  // left:8px;
 }
 .a4::after{
-  // content: "ログイン";
-  // font-size:14px;
-  // font-weight:600;
-  // position:absolute;
   top: 37px;
-  // left:15px;
 }
 .a5::after{
-  // content: "新規登録";
-  // font-size:14px;
-  // font-weight:600;
-  // position:absolute;
   top: 37px;
-  // left:12px;
 }
 .a6::after{
-  // content: "About";
-  // font-size:14px;
-  // font-weight:600;
-  // position:absolute;
   top: 37px;
-  // left:16px;
 }
 .a7::after{
-  // content: "＋保育園";
-  // font-size:14px;
-  // font-weight:600;
-  // position:absolute;
   top: 37px;
-  // left:10px;
 }
 .a8::after{
-  // content: "ユーザー's";
-  // font-size:14px;
-  // font-weight:600;
-  // position:absolute;
   top: 37px;
-  // left:10px;
 }
 .a9::after{
-  // content: "ログアウト";
-  // font-size:14px;
-  // font-weight:600;
-  // position:absolute;
   top: 37px;
-  // left:7px;
 }
 .welcome{
-  // position:absolute;
-  // top:10px;
-  // left:500px;
   font-weight:600;
   width:100%;
 }
@@ -1187,7 +1067,7 @@ background: repeating-linear-gradient(-45deg, #67d1d6, #67d1d6 2px, #fff 2px, #f
   height:300px;
 }
 .about-img{
-  background-image: url(about2.png);
+  background-image: image-url('about2.png');
   background-size: cover;
   background-position:0 -300px;
   background-repeat: no-repeat;
@@ -1223,111 +1103,69 @@ background: repeating-linear-gradient(-45deg, #67d1d6, #67d1d6 2px, #fff 2px, #f
 .n-nav{
   margin:10px auto;
 }
-
-.search-box{
-  // margin-left:10px;
-}
 .item-a{
   width:75px;
   font-size:25px;
   color:#9AB1B7;
 }
 .a1::after{
-  // content: "スポット登録";
   font-size:10px;
-  // font-weight:600;
-  // position:absolute;
   top: 28px;
   left:0px;
 }
 .a2::after{
-  // content: "マイリスト";
   font-size:10px;
-  // font-weight:600;
-  // position:absolute;
   top: 28px;
   left:6px;
 }
 .a3::after{
-  // content: "マイページ";
   font-size:10px;
-  // font-weight:600;
-  // position:absolute;
   top: 28px;
   left:6px;
 }
 .a4::after{
-  // content: "ログイン";
   font-size:10px;
-  // font-weight:600;
-  // position:absolute;
   top: 28px;
   left:12px;
 }
 .a5::after{
-  // content: "新規登録";
   font-size:10px;
-  // font-weight:600;
-  // position:absolute;
   top: 28px;
   left:8px;
 }
 .a6::after{
-  // content: "About";
   font-size:10px;
-  // font-weight:600;
-  // position:absolute;
   top: 28px;
   left:14px;
 }
 .a7::after{
-  // content: "＋保育園";
   font-size:10px;
-  // font-weight:600;
-  // position:absolute;
   top: 28px;
   left:4px;
 }
 .a8::after{
-  // content: "ユーザー's";
   font-size:10px;
-  // font-weight:600;
-  // position:absolute;
   top: 28px;
   left:4px;
 }
 .a9::after{
-  // content: "ログアウト";
   font-size:10px;
-  // font-weight:600;
-  // position:absolute;
   top: 28px;
   left:6px;
 }
 .search-box{
   width:250px;
   margin:0 auto;
-  // margin-top:20px;
 }
 .sbox{
   height: 30px;
-  // padding:0 10px;
   float:none;
-  // width:250px;
   border-radius:25px;
-  // border:solid 2.5px #eaeaea;
-  // outline: 0;
   display:block;
 }
 .sbox-2{
   height: 30px;
-  // padding:0 10px;
   float:left;
-  // width:100px;
-  // border:none;
-  // border-top:solid 2.5px #eaeaea;
-  // border-bottom:solid 2.5px #eaeaea;
-  // outline: 0;
   border-radius:25px;
   display:block;
 }
@@ -1335,14 +1173,11 @@ background: repeating-linear-gradient(-45deg, #67d1d6, #67d1d6 2px, #fff 2px, #f
   height: 30px;
   width:80px;
   padding:0 10px;
-  // display:block;
   float:none;
   background:#7fbfff;
-  // color:#fff;
   border:none;
   border-radius:25px;
   font-size:20px;
-  // outline: 0;
   width:150px;
   margin:0 auto;
 }
@@ -1367,19 +1202,7 @@ background: repeating-linear-gradient(-45deg, #67d1d6, #67d1d6 2px, #fff 2px, #f
   border-radius: 20px;
   background-color:#9AB1B7;
   color: #fff;
-  // margin-right: 20px;
 }
-// .checkbox01-parts::before{
-//   content: "";
-//   display: block;
-//   position: absolute;
-//   top: 0;
-//   left: 0;
-//   width: 15px;
-//   height: 15px;
-//   border: 1px solid #999;
-//   border-radius: 4px;
-// }
 .p1{
   padding-right:20px;
   padding-left:20px;
@@ -1389,18 +1212,6 @@ background: repeating-linear-gradient(-45deg, #67d1d6, #67d1d6 2px, #fff 2px, #f
   color: #ffa9af;
   border-color: #ffa9af;
 }
-// .checkbox01-input:checked + .checkbox01-parts::after{
-//   content: "";
-//   display: block;
-//   position: absolute;
-//   top: -5px;
-//   left: 5px;
-//   width: 7px;
-//   height: 14px;
-//   transform: rotate(40deg);
-//   border-bottom: 3px solid #009a9a;
-//   border-right: 3px solid #009a9a;
-// }
 .h1{
   font-size:15px;
 }
@@ -1409,7 +1220,7 @@ background: repeating-linear-gradient(-45deg, #67d1d6, #67d1d6 2px, #fff 2px, #f
   height:300px;
 }
 .about-img{
-  background-image: url(about2.png);
+  background-image: image-url('about2.png');
   background-size: cover;
   background-position:0 -300px;
   background-repeat: no-repeat;
