--- a/app/views/nurseries/new.html.erb
+++ b/app/views/nurseries/new.html.erb
@@ -53,6 +53,10 @@
 									<td><%= f.text_field :holiday, autofocus: true, class:"form-control" %></td>
 								</tr>
 								<tr>
+									<td><%= f.label :capacity, "定員" %></td>
+									<td><%= f.text_field :capacity, autofocus: true, class:"form-control" %></td>
+								</tr>
+								<tr>
 									<td><%= f.label :url, "URL" %></td>
 									<td><%= f.text_field :url, autofocus: true, class:"form-control" %></td>
 								</tr>
